MarcoKitTests/TestData/error/object7.marco
--before
{5 5}

--after
2-3: Unexpected identifier character ' '
